smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control-version-defined-twice.smithy
// Parse error at line 3, column 11 near `"1`: Duplicate control statement `version`
$version: "1.0"
$version: "1.0"
namespace com.baz
